# crimson-backend

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Mobile.md  New_System.md  New_System_Progress.md  README.md  api.py  check_id.py  check_ova.py  check_rezero.py  check_rezero_group.py  check_s2p2.py  check_s3.py  db_pool.py  debug_rezero_json.py  docker-compose-dev.yml  docker-compose.demo.yml  docker-compose.yml  docker-stack.yml  hexdump_decrypt.py  lumi.py  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  source_health.py
account_engine/: __init__.py  admin_routes.py  db.py  ed25519.py  mailer.py  passwords.py  routes.py
apikey_engine/: __init__.py  db.py
cache_engine/: __init__.py  db.py  downloader.py  fs.py  ticket.py
changelog_engine/: __init__.py  routes.py  service.py
contracts/: watch_ndjson.schema.json
core/: config.py  config_report.py  contracts.py  db_pool.py  http_client.py  player.py  private_sources.py  rate_limit.py  response_cache.py  source_health.py  version.py
discord_bot/: __init__.py  __main__.py  bot.py
local_engine/: __init__.py  db.py  fs.py  transcode.py
metadata_engine/: .env.example  README.md  anilist.py  api_wrapper.py  db_handler.py  db_tester.py  maintenance.py  overrides.json  resync.py  store.py  tmdb.py
recommend_engine/: __init__.py  db.py  recommender.py  routes.py
resolvers/: __init__.py  _crimson_proxy.py  _proxy_secret.py  _ssrf_guard.py  base_resolver.py  cache.py  febbox.py  jellyfin.py  local.py  template.py
scrapers/: __init__.py  base_scraper.py  cache_scraper.py  jellyfin_scraper.py  local_scraper.py  showbox_scraper.py  template_scraper.py
scripts/: export_openapi.py  migrate_sqlite_to_postgres.py
skiptimes_engine/: __init__.py  routes.py  service.py
subtitles_engine/: __init__.py  routes.py  service.py
supporters_engine/: __init__.py  db.py  routes.py
telemetry_engine/: __init__.py  db.py
tests/: conftest.py  test_cache_gate.py  test_config_report.py  test_contracts.py  test_crimson_proxy.py  (+5 more)
web/: util.py  (+7 more)
(+23 files in other folders)
